<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/call"
        android:icon="@drawable/ic_phone_white"
        android:title=""
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/ic_chat_menu"
        android:title=""
        app:showAsAction="always">
        <menu>

            <item
                android:id="@+id/pickup_location"
                android:icon="@drawable/location_gray"
                android:title="@string/show_store_location" />
            <item
                android:id="@+id/drop_off_location"
                android:icon="@drawable/location_gray"
                android:title="@string/show_customer_location" />

            <item
                android:id="@+id/cancel_order"
                android:icon="@drawable/ic_exit"
                android:title="@string/cancel_order" />
        </menu>
    </item>
</menu>