<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/medium_margin"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/title_TextView"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="@dimen/small_text"
            android:textStyle="bold"
            tools:text="@string/attention" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />


        <EditText
            android:id="@+id/body_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:gravity="start"
            android:padding="@dimen/medium_padding"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text"
            tools:text="@string/remove_message_dialog_message" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/ok_Button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_weight="1"

                android:background="@android:color/transparent"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/small_text"
                android:textStyle="bold"
                tools:text="@string/yes" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dismess_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:textColor="@color/darkerRed"
                android:textSize="@dimen/small_text"
                android:textStyle="bold"
                tools:text="@string/no" />
        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>

